styles/ContactForm.module.scss
.formContainer {
    display: flex;
    flex-direction: column;
    font-family: 'Rubik', sans-serif;
    // border: 1px solid black;
    height: 100%;
    // border-radius: 10px;

    label {
        color: #949494;
        font-size: 0.8em;

        font-family: inherit;

        &:nth-of-type(2) {
            margin-top: 10px;
        }
    }

    .emailField {
        height: 50px;
        border-radius: 10px;
        border: none;
        background-color: var(--lightest-aqua);
        box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
        padding: 1em;

    }

    textarea {
        max-height: 260px;
        border-radius: 10px;
        border: none;
        background-color: var(--lightest-aqua);
        resize: none;
        box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
        padding: 1em;

    }

    .submitContainer {
        position: relative;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-areas: "full svg";
        box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
        height: 100%;
        margin-top: 25px;
        border-radius: 10px;
        height: 60px;

        

        .sendBtn {
            grid-area: full-start / full-start / svg-end / svg-end;
            height: 60px;
            width: 100%;
            background-color: var(--primary-color);

            color: var(--lightest-aqua);
            border-radius: 10px;
            border: none;
            cursor: pointer;
            font-size: 1.5em;
            font-weight: bold;
            text-align: center;
            padding-right: 33px;
        }   

        
        .submitWrap {
            grid-area: svg;
            position: relative;

            .sendSvg {
                
                height: 60px;
                width: 100%;
                background-color: transparent;
                color: var(--lightest-aqua);
                border-radius: 0px 10px 10px 0px;
                border: none;
                cursor: pointer;

            }
            &:after {
                content: "";
                position: absolute;
                background-image: url('../public/img/index/send-btn.svg');
                width: 33px;
                height: 30px;
                background-size: contain;
                left: 52px;
                top: 15px;
            }
        }
    

    }
}


@media screen and (min-width: 768px){
    .formContainer {


        .submitContainer {
            width: 220px;
            align-self: flex-end;


            .sendBtn { //input with text
                // font-size: 1.3em;
            }

            .sendSvg { //input with svg

            }
        }
    }
}

